<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!--Profile photo title-->
        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/photo_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

        <!--Profile photo-->
        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/photo_descrip"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/change_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toBottomOf="@+id/profile_title"
            app:srcCompat="@mipmap/ic_launcher" />

        <!--Change button-->
        <Button
            android:id="@+id/change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_change"
            app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toTopOf="@+id/profile_picture"
            android:layout_marginRight="8dp" />

        <!--Used for formatting picture and button-->
        <Space
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/profile_picture"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="65dp"
            tools:ignore="MissingConstraints" />

        <!--Name title-->
        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <!--Name input-->
        <EditText
            android:id="@+id/Name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/edit_message"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_title" />

        <!--Phone title-->
        <TextView
            android:id="@+id/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/phone_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name_field" />

        <!--Phone input-->
        <EditText
            android:id="@+id/Phone_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_title" />

        <!--Gender title-->
        <TextView
            android:id="@+id/gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/gender_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Phone_field" />

        <!--Gender radio buttons-->
        <RadioGroup
            android:id="@+id/gender_radio"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_title">

            <!--Female-->
            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female_text" />

            <!--Male-->
            <RadioButton
                android:id="@+id/male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male_text" />
        </RadioGroup>

        <!--Class title-->
        <TextView
            android:id="@+id/class_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/class_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_radio" />

        <!--Class input-->
        <EditText
            android:id="@+id/Class_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/class_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/class_title" />

        <!--Save-->
        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:onClick="saveSettings"
            android:text="@string/button_save"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp" />

        <!--Cancel-->
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:onClick="cancel"
            android:text="@string/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/Class_field"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp" />

        <!--Guideline for formatting buttons-->
        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>